--- a/frontend/src/app/auth/login/login.html
+++ b/frontend/src/app/auth/login/login.html
@@ -1,4 +1,5 @@
-<div *ngIf="show" class="login-container">
+@if(show) {
+<div class="login-container">
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center min-vh-100">
       <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
@@ -44,3 +45,4 @@
     </div>
   </div>
 </div>
+}
