--- a/frontend/src/app/auth/register/register.html
+++ b/frontend/src/app/auth/register/register.html
@@ -1,4 +1,5 @@
-<div *ngIf="show" class="register-container">
+@if(show) {
+<div class="register-container">
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center min-vh-100">
       <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
@@ -19,7 +20,8 @@
             </div>
           </div>
           <form (ngSubmit)="onRegister()" class="register-form" novalidate>
-            <div *ngIf="currentStep === 1" class="form-step">
+            @if(currentStep === 1) {
+            <div class="form-step">
               <div class="row">
                 <div class="col-md-6 mb-3 form-group">
                   <label for="firstname" class="form-label">
@@ -68,8 +70,10 @@
                 </button>
               </div>
             </div>
+            }
 
-            <div *ngIf="currentStep === 2" class="form-step">
+            @if(currentStep === 2) {
+            <div class="form-step">
               <div class="mb-3 form-group">
                 <label for="password" class="form-label">
                   <i class="bi bi-shield-lock me-2"></i>Mot de passe
@@ -85,19 +89,22 @@
                 <div class="file-input-wrapper">
                   <input type="file" id="profileImage" (change)="onFileSelected($event)" accept="image/*"
                     class="form-control file-input">
-                  <label for="profileImage" class="file-input-label btn btn-outline-secondary"
-                    *ngIf="!profileImagePreview">
+                  @if(!profileImagePreview) {
+                  <label for="profileImage" class="file-input-label btn btn-outline-secondary">
                     <i class="bi bi-cloud-upload me-2"></i>
                     <span class="file-input-text">Choisir une photo</span>
                   </label>
+                  }
                   <!-- <div *ngIf="message">{{message}}</div> -->
                 </div>
-                <div *ngIf="profileImagePreview" class="profile-image-preview">
+                @if(profileImagePreview) {
+                <div class="profile-image-preview">
                   <img [src]="profileImagePreview" alt="Profile Preview">
                   <button type="button" class="remove-profile-btn" (click)="removeProfileImage()">
                     <i class="bi bi-trash"></i> Supprimer
                   </button>
                 </div>
+                }
               </div>
 
               <div class="d-grid gap-2">
@@ -110,6 +117,7 @@
                 </button>
               </div>
             </div>
+            }
           </form>
 
           <div class="login-link">
@@ -124,3 +132,4 @@
     </div>
   </div>
 </div>
+}
