--- a/frontend/src/app/home/components/home.html
+++ b/frontend/src/app/home/components/home.html
@@ -1,8 +1,10 @@
 <div class="main-content container-fluid custom-width">
   <div class="posts-container row g-4">
-    <app-post-card *ngFor="let post of posts" [post]="post" (reaction)="onReact($event)"
+    @for(post of posts; track post.postUuid) {
+    <app-post-card [post]="post" (reaction)="onReact($event)"
       (postCard)="onPostCardSection($event)">
     </app-post-card>
+    }
     <div #anchor class="loading-trigger"></div>
   </div>
 </div>
