--- a/frontend/src/app/home/components/post-card/components/post-gallery/post-gallery.html
+++ b/frontend/src/app/home/components/post-card/components/post-gallery/post-gallery.html
@@ -1,4 +1,10 @@
-<div class="post-images" *ngFor="let media of post.mediaPaths">
-    <img *ngIf="isImage(media.type)" [src]="'http://localhost:8080/' + media.path" width="300" />
-    <video *ngIf="isVideo(media.type)" [src]="'http://localhost:8080/' + media.path" controls width="300"></video>
+@for(media of post.mediaPaths; track media) {
+<div class="post-images">
+    @if(isImage(media.type)) {
+    <img [src]="'http://localhost:8080/' + media.path" width="300" />
+    }
+    @if(isVideo(media.type)) {
+    <video [src]="'http://localhost:8080/' + media.path" controls width="300"></video>
+    }
 </div>
+}
