--- a/frontend/src/app/toast/component/toastComponent.html
+++ b/frontend/src/app/toast/component/toastComponent.html
@@ -1,12 +1,20 @@
-<div *ngIf="toastMessage" class="toast-message" [ngClass]="{
+@if(toastMessage) {
+<div class="toast-message" [ngClass]="{
         'toast-success': toastMessage.type === 'success',
         'toast-error': toastMessage.type === 'error',
         'toast-warning': toastMessage.type === 'warning'}">
-    <i *ngIf="toastMessage.type === 'success'" class="bi bi-check-circle-fill text-success fs-5"></i>
-    <i *ngIf="toastMessage.type === 'error'" class="bi bi-x-circle-fill text-danger fs-5"></i>
-    <i *ngIf="toastMessage.type === 'warning'" class="bi bi-exclamation-triangle-fill text-warning fs-5"></i>
+    @if(toastMessage.type === 'success') {
+    <i class="bi bi-check-circle-fill text-success fs-5"></i>
+    }
+    @if(toastMessage.type === 'error') {
+    <i class="bi bi-x-circle-fill text-danger fs-5"></i>
+    }
+    @if(toastMessage.type === 'warning') {
+    <i class="bi bi-exclamation-triangle-fill text-warning fs-5"></i>
+    }
     <span class="ms-2">{{ toastMessage.text }}</span>
     <button class="close-toast-btn btn-link p-0 ms-2" (click)="toastMessage = null">
         <i class="bi bi-x-lg text-secondary"></i>
     </button>
 </div>
+}
